Use ServiceUtils.newArtifactId(), enhanced Switch