@@ -25,7 +25,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -65,9 +64,7 @@ public class UnderlayService {
 
   public List<Underlay> listUnderlays(ResourceCollection authorizedIds) {
     if (authorizedIds.isAllResources()) {
-      return underlayCache.values().stream()
-          .map(CachedUnderlay::getUnderlay)
-          .collect(Collectors.toUnmodifiableList());
+      return underlayCache.values().stream().map(CachedUnderlay::getUnderlay).toList();
     } else {
       // If the incoming list is empty, the caller does not have permission to see any
       // underlays, so we return an empty list.
@@ -75,13 +72,11 @@ public class UnderlayService {
         return Collections.emptyList();
       }
       List<String> authorizedNames =
-          authorizedIds.getResources().stream()
-              .map(ResourceId::getUnderlay)
-              .collect(Collectors.toList());
+          authorizedIds.getResources().stream().map(ResourceId::getUnderlay).toList();
       return underlayCache.values().stream()
           .map(CachedUnderlay::getUnderlay)
           .filter(underlay -> authorizedNames.contains(underlay.getName()))
-          .collect(Collectors.toUnmodifiableList());
+          .toList();
     }
   }
 
